--- a/msg/processed/test.ipynb
+++ b/msg/processed/test.ipynb
@@ -2,17 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "id": "e003b067",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'{\\n  \"intimacy_level\": \"낮음\",\\n  \"emotional_tone\": \"유머/친근\",\\n  \"personality\": \"호기심 많고 여유로운 성격\",\\n  \"interests\": \"여행, 관광지, 자연경관\",\\n  \"reason\": \"대화가 특정 활동(롯데월드, 스키장, 노을)에 대한 간단한 언급으로 친밀감이 높지 않으며, 메시지 간격이 길고 대화 내용이 제한적이기 때문에 낮음으로 판단됨. 유머와 친근한 표현이 포함되어 있어 감정적 톤은 긍정적이고 유쾌함이 느껴짐. 관심사는 여행과 자연경관에 관련된 것으로 보임.\"\\n}'"
+       "{'intimacy_level': '보통',\n",
+       " 'emotional_tone': '유머/친근',\n",
+       " 'personality': '유쾌하고 친근하며 사교적인 성격',\n",
+       " 'interests': '일상, 음식, 여행, 공부, 취미 활동',\n",
+       " 'reason': \"대화는 여러 차례 유머와 친근한 표현이 사용되었으며, 일상적인 이야기와 함께 서로의 근황을 자연스럽게 공유하는 모습이 나타남. 메시지 교환이 꾸준히 이어지고 있으며, 친밀감이 느껴지지만 깊은 감정 표현이나 매우 높은 친밀감은 드러나지 않음. 마지막 메시지까지도 일상적이고 가볍게 유지되어 있어 '보통' 수준으로 판단됨.\"}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -21,15 +25,17 @@
     "from langchain_openai import ChatOpenAI\n",
     "from langchain.prompts import PromptTemplate\n",
     "import datetime\n",
+    "import json \n",
     "\n",
     "filename = \"KakaoTalkChats.txt.txt\"\n",
     "# filename = \"KakaoTalkChats (1).txt.txt\"\n",
-    "# filename = \"KakaoTalkChats (2).txt.txt\"\n",
-    "# filename = \"KakaoTalkChats (3).txt.txt\"\n",
+    "filename = \"KakaoTalkChats (2).txt.txt\"\n",
     "# filename = \"KakaoTalkChats (4).txt.txt\"\n",
-    "filename = \"message_1.json.txt\"\n",
-    "filename = \"message_111.json.txt\"\n",
+    "# filename = \"message_1.json.txt\"\n",
+    "# filename = \"message_111.json.txt\"\n",
     "# filename = \"message_123.json.txt\"\n",
+    "# filename = \"chat1.txt\"\n",
+    "# filename = \"chat2.txt\"\n",
     "\n",
     "with open(filename, \"r\", encoding=\"utf-8\") as f:\n",
     "    conversation = f.read()\n",
@@ -140,7 +146,7 @@
     "  \"emotional_tone\": \"...\",\n",
     "  \"personality\": \"...\",\n",
     "  \"interests\": \"...\",\n",
-    "  \"reason\": \"...\"\n",
+    "  \"reason\": \"...\",\n",
     "\"\"\")\n",
     "\n",
     "llm_chain = prompt | llm\n",
@@ -152,16 +158,8 @@
     "    }\n",
     ")\n",
     "\n",
-    "res.content"
+    "json.loads(res.content)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3925f971",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
