--- a/msg/processed/test.ipynb
+++ b/msg/processed/test.ipynb
@@ -43,7 +43,7 @@
     "# Initialize the OpenAI model\n",
     "llm = ChatOpenAI(\n",
     "    # model=\"gpt-4.1-mini\",\n",
-    "    # model=\"gpt-4o-mini\",\n",
+    "    # model=\"gpt-4o\",\n",
     "    model=\"gpt-4.1-nano\",\n",
     "    temperature=0,\n",
     ")\n",
