--- a/senpick/giftgraph/tools/product_table_insert/insert_product.ipynb
+++ b/senpick/giftgraph/tools/product_table_insert/insert_product.ipynb
@@ -63,11 +63,143 @@
     "\n",
     "print(\"✅ CSV 데이터가 MySQL에 성공적으로 삽입되었습니다.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a695b2b6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_qdrant import QdrantVectorStore\n",
+    "from qdrant_client.models import Filter, FieldCondition, Range, MatchValue\n",
+    "from qdrant_client import QdrantClient\n",
+    "from langchain_huggingface import HuggingFaceEmbeddings\n",
+    "\n",
+    "qdrant = QdrantClient(url=\"http://localhost:6333\", prefer_grpc=False)\n",
+    "embedding = HuggingFaceEmbeddings(model_name=\"intfloat/multilingual-e5-large-instruct\")\n",
+    "vectorstore = QdrantVectorStore(\n",
+    "    client=qdrant,\n",
+    "    collection_name=\"senpick\",\n",
+    "    embedding=embedding,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b9098c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qdrant.scroll(\n",
+    "    collection_name=\"senpick\",\n",
+    "    scroll_filter=Filter(\n",
+    "        must=[FieldCondition(key=\"price\", range=Range(gte=10000, lte=50000))]\n",
+    "    ),\n",
+    "    limit=3\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dbbcaf2e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "docs = vectorstore.similarity_search(\n",
+    "            \"고마운 멘토에게 5만원대의 멋진 스타일 선물을 준비했는데\", \n",
+    "            k=5,\n",
+    "            filter=Filter(\n",
+    "                must=[\n",
+    "                    FieldCondition(\n",
+    "                        key=\"title\", \n",
+    "                        match=MatchValue(value=\"[아트박스] 5만원권\")\n",
+    "                    )\n",
+    "                ]\n",
+    "            )\n",
+    ")\n",
+    "docs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d71142f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from qdrant_client.models import Filter, FieldCondition, Range, SearchRequest\n",
+    "\n",
+    "query_vector = embedding.embed_query(\"고마운 멘토에게 5만원대의 멋진 스타일 선물을 준비했는데\")\n",
+    "\n",
+    "results = qdrant.search(\n",
+    "    collection_name=\"senpick\",\n",
+    "    query_vector=query_vector,\n",
+    "    limit=5,\n",
+    "    query_filter=Filter(\n",
+    "        must=[\n",
+    "            FieldCondition(\n",
+    "                key=\"price\",\n",
+    "                range=Range(gte=10000, lte=50000)\n",
+    "            )\n",
+    "        ]\n",
+    "    )\n",
+    ")\n",
+    "results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ac4d698d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vectorstore.similarity_search(\n",
+    "            \"고마운 멘토에게 5만원대의 멋진 스타일 선물을 준비했는데\", \n",
+    "            k=20,\n",
+    "            filter=Filter(\n",
+    "                must=[\n",
+    "                    FieldCondition(\n",
+    "                        key=\"Price\",\n",
+    "                        range=Range(\n",
+    "                            gte=9999,\n",
+    "                            # lte=50000,\n",
+    "                        ),\n",
+    "                    )\n",
+    "                ],\n",
+    "            )\n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18a7b343",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "senpick_db",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
